ulink-web-reactjs/config-k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-reactjs-service
  labels:
    app.kubernetes.io/name: web-reactjs
    app.kubernetes.io/instance: web-reactjs-2020
    app.kubernetes.io/version: 2020.1.x
    app.kubernetes.io/component: web-frontend
    app.kubernetes.io/part-of: baet-ulink
spec:
  type: NodePort
  ports:
    - targetPort: 4048
      port: 4048
      nodePort: 30048
  selector:
    app: ulink-web-reactjs
    component: web-frontend
